--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -11,7 +11,7 @@
                     <field name="name_cv" calss="" placeholder="CV Name"/>
                 </h1>
             </xpath>
-            <xpath expr="//page[@name='public']" position="inside">
+            <xpath expr="//page[@name='skills_resume']" position="inside">
                 <group>
                     <field name="resume_extend" readonly="1" invisible="1"/>
                     <field name="resume_projects"/>
