--- a/report/resume_en_template.xml
+++ b/report/resume_en_template.xml
@@ -18,32 +18,32 @@
                     <div class="border my-4 mx-4  rounded-pill ipac_cv_contact">
                         <div t-attf-class="h3 text-center my-0 py-1 {{text_color}}">Contact</div>
                     </div>
-                    <div class="pl-3 ">
+                    <div class="ps-3 ">
                         <div class="row h3 mb-0 mx-2 text-center">
                             <div t-attf-class="ipac_cv_icons {{ipac_bg_2}}">
                                 <i class="fa fa-phone"></i>
                             </div>
-                            <div class="mx-2">Phone</div>
+                            <div class="ms-3 text-start">Phone</div>
                         </div>
-                        <div class="ml-5" t-esc="o.mobile_phone"></div>
+                        <div class="ms-5" t-esc="o.mobile_phone"></div>
 
                         <div class="row h3 mt-5 mx-2 mb-0 text-center">
                             <div t-attf-class="ipac_cv_icons {{ipac_bg_2}}">
                                 <i class="fa fa-envelope "></i>
                             </div>
-                            <div class="mx-2">Email</div>
+                            <div class="ms-3 text-start">Email</div>
                         </div>
-                        <div class="ml-5" t-esc="o.work_email"></div>
+                        <div class="ms-5" t-esc="o.work_email"></div>
 
-                        <div class="row h3 mt-5 mx-2 mb-0 text-center">
+                        <div class="row h3 mt-5 mx-2 mb-1 text-center">
                             <div t-attf-class="ipac_cv_icons {{ipac_bg_2}}">
                                 <i class="fa fa-map-marker "></i>
                             </div>
-                            <div class="mx-2">Address</div>
+                            <div class="ms-3 text-start">Address</div>
                         </div>
-                        <div class="ml-5" t-esc="o.address_id.name"></div>
+                        <div class="ms-5" t-esc="o.address_id.name"></div>
                     </div>
-                    <div class="pl-3 mt-5" style="direction: ltr; text-align: left;">
+                    <div class="ps-3 mt-5" style="direction: ltr; text-align: left;">
                         <div class="border my-4 mx-4 rounded-pill ipac_cv_contact">
                             <div t-attf-class="h3  {{text_color}} text-center  my-0 py-1">Language</div>
                         </div>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
 
-                <div class="col-8 pt-2 ">
+                <div class="col-8 pt-2 ps-1 ">
                     <!--                    Education-->
                     <div t-if="educations[o.id]"
                          t-attf-class="col-5 py-1 my-4 rounded-pill ipac_cv_contact {{ipac_bg_1}}">
@@ -71,7 +71,7 @@
                                 <div class="col-4 p-0 small"
                                      t-esc="line['date_start'] + ' - ' + line['date_end']"></div>
                             </div>
-                            <div class="ml-3 small" t-foreach="line['description']" t-as="desc_line"
+                            <div class="ms-3 small" t-foreach="line['description']" t-as="desc_line"
                                  t-esc="desc_line"></div>
                         </div>
                     </t>
@@ -88,7 +88,7 @@
                                 <div class="col-4 p-0 small"
                                      t-esc="line['date_start'] + ' - ' + line['date_end']"></div>
                             </div>
-                            <div class="ml-3 small ipac_pagebreak_avoid" t-foreach="line['description']" t-as="desc_line"
+                            <div class="ms-3 small ipac_pagebreak_avoid" t-foreach="line['description']" t-as="desc_line"
                                  t-esc="desc_line"></div>
                         </div>
                     </t>
@@ -101,12 +101,12 @@
                             </div>
                         </div>
                         <t t-foreach="projects_1[o.id]" t-as="line">
-                            <div class="ml-5 ipac_pagebreak_avoid">
+                            <div class="ms-5 ipac_pagebreak_avoid">
                                 <div class="row mx-0 ">
                                     <div class="col mx-0 p-0 " t-esc="line['name']"></div>
-                                    <!--                                    <div class="ml-5" t-esc="line['date_start'] + ' - ' + line['date_end']"></div>-->
+                                    <!--                                    <div class="ms-5" t-esc="line['date_start'] + ' - ' + line['date_end']"></div>-->
                                 </div>
-                                <div class="ml-3 ipac_pagebreak_avoid" t-foreach="line['description']" t-as="desc_line"
+                                <div class="ms-3 ipac_pagebreak_avoid" t-foreach="line['description']" t-as="desc_line"
                                      t-esc="desc_line"></div>
                             </div>
                         </t>
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <t t-foreach="capabilities_1[o.id]" t-as="skill">
-                            <div class="ml-5 ipac_pagebreak_avoid">
+                            <div class="ms-5 ipac_pagebreak_avoid">
                                 <div class="row mx-0">
                                     <div class="col-9 h6 p-0" t-esc="skill['name']"></div>
                                     <div class="col-3 p-0" t-esc="skill['level']"></div>
@@ -145,12 +145,12 @@
                             </div>
                         </div>
                         <t t-foreach="projects_2[o.id]" t-as="line">
-                            <div class="ml-5 ipac_pagebreak_avoid">
+                            <div class="ms-5 ipac_pagebreak_avoid">
                                 <div class="row mx-0 ">
                                     <div class="col mx-0 p-0 " t-esc="line['name']"></div>
-                                    <!--                                    <div class="ml-5" t-esc="line['date_start'] + ' - ' + line['date_end']"></div>-->
+                                    <!--                                    <div class="ms-5" t-esc="line['date_start'] + ' - ' + line['date_end']"></div>-->
                                 </div>
-                                <div class="ml-3 ipac_pagebreak_avoid" t-foreach="line['description']" t-as="desc_line"
+                                <div class="ms-3 ipac_pagebreak_avoid" t-foreach="line['description']" t-as="desc_line"
                                      t-esc="desc_line"></div>
                             </div>
                         </t>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                         <t t-foreach="capabilities_2[o.id]" t-as="skill">
-                            <div class="ml-5 ipac_pagebreak_avoid">
+                            <div class="ms-5 ipac_pagebreak_avoid">
                                 <div class="row mx-0">
                                     <div class="col-9 h6 p-0" t-esc="skill['name']"></div>
                                     <div class="col-3 p-0" t-esc="skill['level']"></div>
@@ -179,13 +179,13 @@
                             </div>
                         </div>
                         <t t-foreach="qualifications[o.id]" t-as="line">
-                            <div class="ml-5 ipac_pagebreak_avoid">
+                            <div class="ms-5 ipac_pagebreak_avoid">
                                 <div class="row mx-0">
                                     <div class="col-9 h6 p-0 font-weight-bold" t-esc="line['name']"></div>
                                     <div class="col-3 p-0 small"
                                          t-esc="line['date_start'] + ' - ' + line['date_end'] if line['date_end'] else line['date_start']"></div>
                                 </div>
-                                <div class="ml-3 ipac_pagebreak_avoid" t-foreach="line['description']" t-as="desc_line"
+                                <div class="ms-3 ipac_pagebreak_avoid" t-foreach="line['description']" t-as="desc_line"
                                      t-esc="desc_line"></div>
                             </div>
                         </t>
@@ -199,7 +199,7 @@
                             </div>
                         </div>
                         <t t-foreach="software[o.id]" t-as="skill">
-                            <div class="ml-5 ipac_pagebreak_avoid">
+                            <div class="ms-5 ipac_pagebreak_avoid">
                                 <div class="row mx-0">
                                     <div class="col-9 h6 p-0" t-esc="skill['name']"></div>
                                     <div class="col-3 p-0" t-esc="skill['level']"></div>
@@ -216,7 +216,7 @@
 
                         </div>
                         <t t-foreach="trainings[o.id]" t-as="skill">
-                            <div class="ml-5 ipac_pagebreak_avoid">
+                            <div class="ms-5 ipac_pagebreak_avoid">
                                 <div class="row mx-0">
                                     <div class="col-9 h6 p-0" t-esc="skill['name']"></div>
                                     <div class="col-3 p-0" t-esc="skill['level']"></div>
@@ -230,7 +230,7 @@
                             <div t-attf-class="h3 text-center   {{text_color}} my-0 py-1">Awards</div>
                         </div>
                         <t t-foreach="awards[o.id]" t-as="skill">
-                            <div class="ml-5 ipac_pagebreak_avoid">
+                            <div class="ms-5 ipac_pagebreak_avoid">
                                 <div class="row mx-0">
                                     <div class="col-9 h6 p-0" t-esc="skill['name']"></div>
                                     <div class="col-3 p-0" t-esc="skill['level']"></div>
